--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "apisix-dashboard",
+  "name": "nwpuapi-dashboard",
   "version": "3.0.0",
   "private": true,
-  "description": "Dashboard for Apache APISIX",
+  "description": "Dashboard for NWPUAPI",
   "scripts": {
     "prepare": "cd .. && husky install web/.husky",
     "analyze": "cross-env ANALYZE=1 yarn run build",
@@ -160,5 +160,6 @@
     "src/**/*.less",
     "config/**/*.js*",
     "scripts/**/*.js"
-  ]
+  ],
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
