--- a/web/src/manifest.json
+++ b/web/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Apache APISIX Dashboard",
-  "short_name": "Apache APISIX Dashboard",
+  "name": "NWPUAPI Dashboard",
+  "short_name": "NWPUAPI Dashboard",
   "display": "standalone",
   "start_url": "./?utm_source=homescreen",
   "theme_color": "#002140",
