--- a/api/conf/conf.yaml
+++ b/api/conf/conf.yaml
@@ -36,7 +36,7 @@ conf:
                           # It also support CIDR like 192.168.1.0/24 and 2001:0db8::/32
   etcd:
     endpoints:            # supports defining multiple etcd host addresses for an etcd cluster
-      - 127.0.0.1:2379
+      - 172.18.0.2:2379
                           # yamllint disable rule:comments-indentation
                           # etcd basic auth info
     # username: "root"    # ignore etcd username if not enable etcd auth
@@ -115,3 +115,5 @@ plugins:
   - traffic-split
   - ua-restriction
   - elasticsearch-logge
+  - zipkin
+  - prometheus
