--- a/builddocker/Dockerfile
+++ b/builddocker/Dockerfile
@@ -3,6 +3,8 @@ ARG IMAGE_TAG="20.04"
 
 FROM ${IMAGE_BASE}:${IMAGE_TAG}
 
+ARG HTTP_PROXY
+ARG HTTPS_PROXY
 
 COPY ./utils/install-common.sh /install-common.sh
 COPY ./utils/determine-dist.sh /determine-dist.sh
@@ -20,13 +22,10 @@ ARG CODE_PATH
 ENV IMAGE_BASE=${IMAGE_BASE}
 ENV IMAGE_TAG=${IMAGE_TAG}
 
-# COPY /home/wlp/apisixFile/apisix-dashboard/ /apisix-dashboard
-RUN git clone https://github.com/wlp1231/apisix-dashboard.git /apisix-dashboard
+RUN env http_proxy=${HTTP_PROXY} https_proxy=${HTTPS_PROXY} git clone https://github.com/wlp1231/nwpuapi-dashboard.git /nwpuapi-dashboard
 
-# install APISIX dashboard
-RUN /install-common.sh install_dashboard \
-    # determine dist and write it into /tmp/dist file
+RUN env http_proxy=${HTTP_PROXY} https_proxy=${HTTPS_PROXY} /install-common.sh install_dashboard \
     && /determine-dist.sh
 EXPOSE 9000   
-WORKDIR /tmp/build/output/apisix/dashboard/usr/local/apisix/dashboard
+WORKDIR /tmp/build/output/nwpuapi/dashboard/usr/local/nwpuapi/dashboard
 ENTRYPOINT ["./manager-api"]
