--- a/api/conf/conf.yaml
+++ b/api/conf/conf.yaml
@@ -31,8 +31,8 @@ conf:
   #   key:  "/tmp/cert/example.key"  # Path of your SSL key.
 
   allow_list:             # If we don't set any IP list, then any IP access is allowed by default.
-    - 127.0.0.1           # The rules are checked in sequence until the first match is found.
-    - ::1                 # In this example, access is allowed only for IPv4 network 127.0.0.1, and for IPv6 network ::1.
+    - 0.0.0.0/0           # The rules are checked in sequence until the first match is found.
+    - ::/0                 # In this example, access is allowed only for IPv4 network 127.0.0.1, and for IPv6 network ::1.
                           # It also support CIDR like 192.168.1.0/24 and 2001:0db8::/32
   etcd:
     endpoints:            # supports defining multiple etcd host addresses for an etcd cluster
@@ -46,6 +46,10 @@ conf:
       cert_file: ""         # Path of your self-signed client side cert
       ca_file: ""           # Path of your self-signed ca cert, the CA is used to sign callers' certificates
     # prefix: /apisix       # apisix config's prefix in etcd, /apisix by default
+  
+  security:
+    content_security_policy: "frame-src *;"
+
   log:
     error_log:
       level: warn       # supports levels, lower to higher: debug, info, warn, error, panic, fatal
@@ -117,3 +121,4 @@ plugins:
   - elasticsearch-logge
   - zipkin
   - prometheus
+  - response-rewrite
